<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vikler</string>
    <string name="title_section1">Grab the moment</string>
    <string name="title_section2">Share the moment</string>
    <string name="title_section3">Friends</string>
    <string name="title_section4">Favourites</string>
    <string name="title_section5">Conversations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">LOG IN</string>
    <string name="signup_text">Don\'t have an account yet? Sign up here!</string>
    <string name="login_error_message">Username or password can not be empty.</string>
    <string name="login_error_title">Login error</string>
    <string name="session_invalid_error">Your current session is no longer valid. Please log in again.</string>
    <string name="logn_generic_error">Something went wrong. Please retry.</string>
    <string name="network_not_available">No network connection available.</string>
    <string name="network_error_title">Network error</string>
    <string name="title_activity_blogpostdetail">BlogPostDetailActivity</string>
    <string name="title_activity_edituser">Edit Profile</string>
    <string name="been_there_num">52 friends</string>
    <string name="edit_friends_error_title">Sorry, something went wrong.</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="name_hint">Display Name</string>
    <string name="hometown_hint">Hometown</string>
    <string name="website_hint">Website</string>
    <string name="email_hint">Email</string>
    <string name="save_button_label">Save</string>
    <string name="edit_profile_error_title">Sorry! Changes could not be saved.</string>
    <string name="edit_profile_error_message_no_email">You need to provide an email address.</string>
    <string name="signup_button_label">Sign Up!</string>
    <string name="signup_error_title">Sign-up failed!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="add_post">Add</string>
    <string name="vikler_city">vikler_city</string>
    <string name="vikler_clouds">vikler_clouds</string>

</resources>
